--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "test": "Test"
   },
+  "engines": {
+    "node": "0.12.x",
+    "npm": "2.5.x"
+  },
   "keywords": [
     "mean"
   ],
   "author": "Peter Petrov",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongoose": "^4.1.3",
+    "stylus": "^0.52.0"
   }
 }
