--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "jade": "^1.11.0",
     "mongoose": "^4.1.3",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
     "stylus": "^0.52.0"
   }
 }
